Fix overflow

--- a/_scss/_highlights.scss
+++ b/_scss/_highlights.scss
@@ -8,6 +8,10 @@
   padding: 5px 10px;
   margin: 20px 0;
 }
+
+.highlight pre {
+  overflow: scroll;
+}
  
 code {
   font-family: 'Courier', monospace;
